--- a/backend/frontend/src/components/Classes.css
+++ b/backend/frontend/src/components/Classes.css
@@ -1,50 +1,54 @@
 .layout {
-    background-color: transparent;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+  background-color: transparent;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
-.hovered:hover{
-    cursor: pointer;
+.hovered:hover {
+  cursor: pointer;
 }
 
 .shelf {
-    color: white;
-    border: 1px solid yellow
+  color: white;
+  border: 1px solid yellow
 }
 
-input{
-    font-size: larger;
+input {
+  font-size: larger;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 ul.images {
-    display: grid;
-    /* grid-template-columns: repeat(auto-fit, minmax(450px, 1fr)); */
-    grid-gap: 15px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  ul.images > li {
-    position: relative;
-    padding-top: 66%;
-  }
-  
-  ul.images > li img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  /* @media (max-width: 567px) {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(450px, 1fr)); */
+  grid-gap: 15px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul.images>li {
+  position: relative;
+  padding-top: 66%;
+}
+
+ul.images>li img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* @media (max-width: 567px) {
     ul.images {
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
